created construct_sphere funcion

--- a/plot_net.ipynb
+++ b/plot_net.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1ce71131b9d46e7c47a7b98b582cd257b2c578b61770e9d3b3f59537b922c8d4"
+  "signature": "sha256:b0c24efdcbc56990726dca96bfffd312fc1d3cbc467857636d7d28d86912c8f5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -200,7 +200,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -209,7 +209,7 @@
       "# choose colors:\n",
       "# http://www.discoveryplayground.com/computer-programming-for-kids/rgb-colors/\n",
       "# http://matplotlib.org/examples/color/named_colors.html\n",
-      "#cm.colors_lib # dictionary of named colors as color_name:(r,g,b)"
+      "#cm.colors_lib # dictionary of all named colors as color_name:(r,g,b)"
      ],
      "language": "python",
      "metadata": {},
@@ -220,11 +220,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# may chose specific colors in the list below, the full list of colors is cm.color_lib\n",
+      "# put desired colors in the list below to use in a colormap:\n",
+      "# may use multiple lists\n",
       "color_list = ['azure', 'brown', 'cadetblue', 'coral', 'blueviolet', 'beige', 'green'] \n",
       "\n",
       "cre_lines = cells_below_y100_df['cre_line'].unique() # find unique labels from a particular column\n",
-      "cmap_cre_line = cm.make_color_map(cre_lines,color_list) # make color map for these labels\n",
+      "cmap_cre_line = cm.make_color_map(cre_lines,color_list) # make a color map for these labels\n",
       "cmap_ei = {'excitatory':'red','inhibitory':'blue'} # example of a manually created colormap\n",
       "cmap_cre_line"
      ],
@@ -234,7 +235,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 10,
        "text": [
         "{'Htr3a': 'cadetblue',\n",
         " 'Ntsr1': 'blueviolet',\n",
@@ -246,7 +247,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -254,8 +255,8 @@
      "input": [
       "#plot selected cells\n",
       "\n",
-      "fig.plot_morph(cells_below_y100_df[::100], morphologies, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
-      "fig.plot_somas(cells_below_y100_df[::100], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+      "fig.plot_morph(cells_below_y100_df[::10], morphologies, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+      "fig.plot_somas(cells_below_y100_df[::10], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
       "\n",
       "\n",
       "\n"
@@ -267,7 +268,28 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "... processing cell:  ready to display 3d segments!\n",
+        "... processing cell:  100 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "200 300 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "400 500 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "600 700 ready to display 3d segments!\n",
         "... processing cell:  "
        ]
       },
@@ -275,11 +297,53 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "ready to display!\n"
+        "100 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "200 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "300 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "400 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "500 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "600 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "700 ready to display!\n"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -298,7 +362,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -309,107 +373,12 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "# !!!!!!!!!!!code below is not used!!!!!!!!!!!!!!!!\n",
-      "#Select prepresynaptic cells\n",
-      "\n",
-      "presyn_selection = \"Give me all the presynaptic cells to my cell\" #Can this be done w/o instantiating column since synapses not setup\n",
-      "cells_select_df = cells_prop_df.query(presyn_selection)\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "number of cells satisfying selection: 43152\n"
-       ]
-      }
-     ],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#vis.set_box_edge_tick_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "#vis.set_axes(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "#vis.set_box_axes_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "#vis.set_title('mouse V1 column')\n",
-      "#vis.electrode(positions=linear_electrode_positions) # linear_electrode_positions are specified somewhere above\n",
-      "\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# select nodes to visualize:\n",
-      "\n",
-      "# below is an example of choosing nodes but not using the df.query() function\n",
-      "#nodes_selection1_df = ~nodes_df['cre_line'].isin(['Sst','Pvalb']) # chose nodes other than 'Sst' or 'Pvalb' in \"cre_line\" column\n",
-      "#nodes_selection2_df = nodes_df['cre_line'].isin(['Sst']) # chose nodes other than 'Sst' or 'Pvalb' in \"cre_line\" column\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 18
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "layer_depths = [100,310,420,650,850]\n",
-      "vis.create_window(background='white') # create a blank window for visualization\n",
-      "vis.set_box(edge_coords=) # xyz volume block to place in the window\n",
-      "vis.set_camera_view(location=my_location) # point of view, or may be just an orientation\n",
-      "vis.set_box_edge_tick_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "vis.set_axes(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "vis.set_box_axes_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "vis.layers(depths=layer_depths,colors=layer_colors)\n",
-      "vis.load_nodes(nodes_df,morphologies) # pass nodes to the visualiz\n",
-      "vis.somata3d(gids_sel1,color='magenta')\n",
-      "vis.morphs3d(gids_selg2,colors = pop_colors) # a different data frame may be passed here\n",
-      "vis.set_title('mouse V1 column')\n",
-      "vis.electrode(positions=linear_electrode_positions) # linear_electrode_positions are specified somewhere above\n",
-      "vis.show() # the figure will pop up after after show command\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# another use case\n",
-      "\n",
-      "cells_types_file_name =\"/local1/ice/local_sims/20cells/net/con_types.csv\"\n",
-      "con_ij_file_name = \"/local1/ice/local_sims/20cells/net/conij.h5\"\n",
-      "\n",
-      "# con_types_df is a dataframe of connection types which we load fully \n",
-      "# con_ij is the matrix of ij connections. We do not fully load it to disk because it is huge\n",
-      "con_types,con_ij_handle = ng.load_edges(cells_types_file_name,con_ij_file_name) \n",
-      "\n",
-      "vis.create_window(background='black') # will clear existing window\n",
-      "vis.load_connections(file_name_con_types,file_name_conn_ij_handle) # \n",
-      "vis.plot_presynaptic_cells(gid=cell_gid) # presynaptic cells for a particuarl cell_gid\n",
-      "vis.plot_postsyntic_cells(gid=cell_gid) # postsynaptic cells for a particuarl cell_gid\n",
-      "vis.show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
