--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d57aeb34a9a74c54e75b24c204b2f94d33ff14bba2200e731315536c477e7498"
+  "signature": "sha256:ffa9b867e4ff51f34978455778b2c62c1ade604cba60d0da5b4b66368015ef4e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -126,7 +126,67 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "layer_depths = [100,310,420,650,850]\n",
+      "vis.create_window(background='white') # create a blank window for visualization\n",
+      "vis.set_box(edge_coords=) # xyz volume block to place in the window\n",
+      "vis.set_camera_view(location=my_location) # point of view, or may be just an orientation\n",
+      "vis.set_box_edge_tick_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
+      "vis.set_axes(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
+      "vis.set_box_axes_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
+      "vis.layers(depths=layer_depths,colors=layer_colors)\n",
+      "vis.load_nodes(nodes_df,morphologies) # pass nodes to the visualiz\n",
+      "vis.somata3d(gids_sel1,color='magenta')\n",
+      "vis.morphs3d(gids_selg2,colors = pop_colors) # a different data frame may be passed here\n",
+      "vis.set_title('mouse V1 column')\n",
+      "vis.electrode(positions=linear_electrode_positions) # linear_electrode_positions are specified somewhere above\n",
+      "vis.show() # the figure will pop up after after show command\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# another use case\n",
+      "\n",
+      "cells_types_file_name =\"/local1/ice/local_sims/20cells/net/con_types.csv\"\n",
+      "con_ij_file_name = \"/local1/ice/local_sims/20cells/net/conij.h5\"\n",
+      "\n",
+      "# con_types_df is a dataframe of connection types which we load fully \n",
+      "# con_ij is the matrix of ij connections. We do not fully load it to disk because it is huge\n",
+      "con_types,con_ij_handle = ng.load_edges(cells_types_file_name,con_ij_file_name) \n",
+      "\n",
+      "vis.create_window(background='black') # will clear existing window\n",
+      "vis.load_connections(file_name_con_types,file_name_conn_ij_handle) # \n",
+      "vis.plot_presynaptic_cells(gid=cell_gid) # presynaptic cells for a particuarl cell_gid\n",
+      "vis.plot_postsyntic_cells(gid=cell_gid) # postsynaptic cells for a particuarl cell_gid\n",
+      "vis.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#vis.set_box_edge_tick_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
+      "#vis.set_axes(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
+      "#vis.set_box_axes_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
+      "#vis.set_title('mouse V1 column')\n",
+      "#vis.electrode(positions=linear_electrode_positions) # linear_electrode_positions are specified somewhere above\n",
+      "\n",
+      "# !!!!!!!!!!!code below is not used!!!!!!!!!!!!!!!!\n",
+      "#Select prepresynaptic cells\n",
+      "\n",
+      "presyn_selection = \"Give me all the presynaptic cells to my cell\" #Can this be done w/o instantiating column since synapses not setup\n",
+      "cells_select_df = cells_prop_df.query(presyn_selection)\n",
+      "\n",
+      "\n"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
