--- a/examples/plot_net.ipynb
+++ b/examples/plot_net.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:70d998e8b98a302b6c2672ece7c69fdf8e6225d96e65ceb66fc3431c086ef78d"
+  "signature": "sha256:02beb7147e07623d214c8a6b9f2809bebc1929d07c8975019d72def00fa657b1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,18 +23,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "ImportError",
-       "evalue": "No module named plotbio",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-1-370ae873b62d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mbiovis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplotbio\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mbiovis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnetgraph\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mng\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mbiovis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcmaps\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mcm\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mu'load_ext autoreload'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mImportError\u001b[0m: No module named plotbio"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 1
     },
     {
@@ -43,11 +32,12 @@
      "input": [
       "# load network structure\n",
       "\n",
-      "cells_file_name =\"examples/column_net/structure/cells.csv\"\n",
-      "cell_models_file_name = \"examples/column_net/structure/cell_models.csv\"\n",
-      "morph_dir = \"examples/column_net/structure/morph_segs\"\n",
+      "cells_file_name =\"./column_net/structure/cells.csv\"\n",
+      "cell_models_file_name = \"./column_net/structure/cell_models.csv\"\n",
+      "morph_dir = \"./column_net/structure/morph_segs\"\n",
       "\n",
       "nodes_df, cm_df = ng.load_nodes(cells_file_name, cell_models_file_name)\n",
+      "\n",
       "morphologies, soma_sizes = ng.load_morphologies(morph_dir, cm_df)\n",
       "print \"...# unique morphologies: \", len(morphologies)\n",
       "\n",
@@ -62,15 +52,15 @@
        "stream": "stdout",
        "text": [
         "...importing nodes...\n",
-        "...total # cells simulated:  50770\n",
-        "...importing morphologies..."
+        "...total # cells simulated: "
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n",
+        " 50770\n",
+        "...importing morphologies...\n",
         "...# unique morphologies: "
        ]
       },
@@ -82,7 +72,18 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#cm_df"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -119,7 +120,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -144,7 +145,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -169,7 +170,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -192,7 +193,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -211,7 +212,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -220,22 +221,24 @@
       "# choose colors:\n",
       "# http://www.discoveryplayground.com/computer-programming-for-kids/rgb-colors/\n",
       "# http://matplotlib.org/examples/color/named_colors.html\n",
-      "#cm.colors_lib # dictionary of named colors as color_name:(r,g,b)"
+      "#cm.colors_lib # dictionary of all named colors as color_name:(r,g,b)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "color_list = ['azure', 'brown', 'cadetblue', 'coral', 'blueviolet', 'beige', 'green']\n",
+      "# put desired colors in the list below to use in a colormap:\n",
+      "# may use multiple lists\n",
+      "color_list = ['azure', 'brown', 'cadetblue', 'coral', 'blueviolet', 'beige', 'green'] \n",
       "\n",
-      "cre_lines = cells_below_y100_df['cre_line'].unique()\n",
-      "cmap_cre_line = cm.make_color_map(cre_lines,color_list)\n",
-      "cmap_ei = {'excitatory':'red','inhibitory':'blue'}\n",
+      "cre_lines = cells_below_y100_df['cre_line'].unique() # find unique labels from a particular column\n",
+      "cmap_cre_line = cm.make_color_map(cre_lines,color_list) # make a color map for these labels\n",
+      "cmap_ei = {'excitatory':'red','inhibitory':'blue'} # example of a manually created colormap\n",
       "cmap_cre_line"
      ],
      "language": "python",
@@ -244,7 +247,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 12,
        "text": [
         "{'Htr3a': 'cadetblue',\n",
         " 'Ntsr1': 'blueviolet',\n",
@@ -256,7 +259,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -264,8 +267,8 @@
      "input": [
       "#plot selected cells\n",
       "\n",
-      "fig.plot_morph(cells_below_y100_df[::200], morphologies, cmap_ei,'ei')    #Pass query into plotting routine along with raw morphologies\n",
-      "fig.plot_somas(cells_below_y100_df[::200], soma_sizes, cmap_ei,'ei')    #Pass query into plotting routine along with raw morphologies\n",
+      "fig.plot_morph(cells_below_y100_df[::100], morphologies, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+      "fig.plot_somas(cells_below_y100_df[::100], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
       "\n",
       "\n",
       "\n"
@@ -285,11 +288,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "ready to display!\n"
+        "ready to display spherical somata!\n"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -308,7 +311,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -319,127 +322,12 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "cells_below_y100_df['cre_line'].unique()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 4,
-       "text": [
-        "array(['Rbp4', 'Pvalb', 'Htr3a', 'Sst', 'Ntsr1', 'Scnn1a', 'Rorb'], dtype=object)"
-       ]
-      }
-     ],
-     "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# !!!!!!!!!!!code below is not used!!!!!!!!!!!!!!!!\n",
-      "#Select prepresynaptic cells\n",
-      "\n",
-      "presyn_selection = \"Give me all the presynaptic cells to my cell\" #Can this be done w/o instantiating column since synapses not setup\n",
-      "cells_select_df = cells_prop_df.query(presyn_selection)\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "number of cells satisfying selection: 43152\n"
-       ]
-      }
-     ],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#vis.set_box_edge_tick_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "#vis.set_axes(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "#vis.set_box_axes_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "#vis.set_title('mouse V1 column')\n",
-      "#vis.electrode(positions=linear_electrode_positions) # linear_electrode_positions are specified somewhere above\n",
-      "\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# select nodes to visualize:\n",
-      "\n",
-      "# below is an example of choosing nodes but not using the df.query() function\n",
-      "#nodes_selection1_df = ~nodes_df['cre_line'].isin(['Sst','Pvalb']) # chose nodes other than 'Sst' or 'Pvalb' in \"cre_line\" column\n",
-      "#nodes_selection2_df = nodes_df['cre_line'].isin(['Sst']) # chose nodes other than 'Sst' or 'Pvalb' in \"cre_line\" column\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 18
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "layer_depths = [100,310,420,650,850]\n",
-      "vis.create_window(background='white') # create a blank window for visualization\n",
-      "vis.set_box(edge_coords=) # xyz volume block to place in the window\n",
-      "vis.set_camera_view(location=my_location) # point of view, or may be just an orientation\n",
-      "vis.set_box_edge_tick_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "vis.set_axes(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "vis.set_box_axes_labels(position='southwest',linewidth=2) # add xyz axes to be able to orient in space\n",
-      "vis.layers(depths=layer_depths,colors=layer_colors)\n",
-      "vis.load_nodes(nodes_df,morphologies) # pass nodes to the visualiz\n",
-      "vis.somata3d(gids_sel1,color='magenta')\n",
-      "vis.morphs3d(gids_selg2,colors = pop_colors) # a different data frame may be passed here\n",
-      "vis.set_title('mouse V1 column')\n",
-      "vis.electrode(positions=linear_electrode_positions) # linear_electrode_positions are specified somewhere above\n",
-      "vis.show() # the figure will pop up after after show command\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# another use case\n",
-      "\n",
-      "cells_types_file_name =\"/local1/ice/local_sims/20cells/net/con_types.csv\"\n",
-      "con_ij_file_name = \"/local1/ice/local_sims/20cells/net/conij.h5\"\n",
-      "\n",
-      "# con_types_df is a dataframe of connection types which we load fully \n",
-      "# con_ij is the matrix of ij connections. We do not fully load it to disk because it is huge\n",
-      "con_types,con_ij_handle = ng.load_edges(cells_types_file_name,con_ij_file_name) \n",
-      "\n",
-      "vis.create_window(background='black') # will clear existing window\n",
-      "vis.load_connections(file_name_con_types,file_name_conn_ij_handle) # \n",
-      "vis.plot_presynaptic_cells(gid=cell_gid) # presynaptic cells for a particuarl cell_gid\n",
-      "vis.plot_postsyntic_cells(gid=cell_gid) # postsynaptic cells for a particuarl cell_gid\n",
-      "vis.show()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
