--- a/examples/plot_net.ipynb
+++ b/examples/plot_net.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:02beb7147e07623d214c8a6b9f2809bebc1929d07c8975019d72def00fa657b1"
+  "signature": "sha256:8ffb6a610741b5fd99cef717dc71543c24613c61390da9985c9ec6f453b97510"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -52,15 +52,15 @@
        "stream": "stdout",
        "text": [
         "...importing nodes...\n",
-        "...total # cells simulated: "
+        "...total # cells simulated:  50770\n",
+        "...importing morphologies..."
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        " 50770\n",
-        "...importing morphologies...\n",
+        "\n",
         "...# unique morphologies: "
        ]
       },
@@ -72,7 +72,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -120,7 +120,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -145,7 +145,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -153,8 +153,8 @@
      "input": [
       "#Create layer slices\n",
       "layer_depths = [100,310,420,650,850]  #NB: values will display as negative, i.e. from top of cortex\n",
-      "layer_colors = [(0, 0, 127)] #blue\n",
-      "layer_alpha = 100\n",
+      "layer_colors = ['red','blue','green','cyan','magenta'] #blue\n",
+      "layer_alpha = 80\n",
       "fig.set_layers(layer_depths, layer_colors, layer_alpha)\n",
       "\n",
       "\n"
@@ -170,7 +170,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -193,7 +193,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -212,7 +212,7 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -226,7 +226,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -247,7 +247,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 34,
        "text": [
         "{'Htr3a': 'cadetblue',\n",
         " 'Ntsr1': 'blueviolet',\n",
@@ -259,7 +259,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
@@ -267,8 +267,8 @@
      "input": [
       "#plot selected cells\n",
       "\n",
-      "fig.plot_morph(cells_below_y100_df[::100], morphologies, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
-      "fig.plot_somas(cells_below_y100_df[::100], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+      "fig.plot_morph(cells_below_y100_df[::10], morphologies, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+      "fig.plot_somas(cells_below_y100_df[::10], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
       "\n",
       "\n",
       "\n"
@@ -280,19 +280,82 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "... processing cell:  ready to display 3d segments!\n",
-        "... processing cell:  "
+        "... processing cell:  100 "
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "ready to display spherical somata!\n"
+        "200 300 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "400 500 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "600 700 ready to display 3d segments!\n",
+        "... processing cell: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 100 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "200 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "300 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "400 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "500 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "600 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "700 ready to display spherical somata!\n"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -302,16 +365,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "... showing ...\n"
-       ]
-      }
-     ],
-     "prompt_number": 14
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -322,7 +376,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
