--- a/examples/plot_net.ipynb
+++ b/examples/plot_net.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8ffb6a610741b5fd99cef717dc71543c24613c61390da9985c9ec6f453b97510"
+  "signature": "sha256:6d7c2ca03dda2b8d5a4ed5fcdc03498cdd9e33a5e37a662a18d6ef5a007a772c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -39,7 +39,6 @@
       "nodes_df, cm_df = ng.load_nodes(cells_file_name, cell_models_file_name)\n",
       "\n",
       "morphologies, soma_sizes = ng.load_morphologies(morph_dir, cm_df)\n",
-      "print \"...# unique morphologies: \", len(morphologies)\n",
       "\n",
       "\n",
       "    "
@@ -51,17 +50,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "...importing nodes...\n",
-        "...total # cells simulated:  50770\n",
-        "...importing morphologies..."
+        "...importing nodes...  "
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n",
-        "...# unique morphologies: "
+        "50770\n",
+        "# unique morphologies: "
        ]
       },
       {
@@ -72,7 +69,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 68
     },
     {
      "cell_type": "code",
@@ -93,14 +90,14 @@
       "\n",
       "#selection = \"cre_line=='Rorb' & location=='VisL4' & (z_soma**2+x_soma**2)<200**2\"\n",
       "mask_narrow_col = \"(z_soma**2+x_soma**2)<100**2\"\n",
-      "#mask_below_y100 = \"y_soma<-500 & cre_line=='Rorb'\"\n",
-      "mask_below_y100 = \"y_soma<-500 and x_soma>100\"\n",
+      "xplane_range = [-200,200]\n",
+      "mask_below_y100_slice = \" (y_soma<-500) & (x_soma>-200) & (x_soma<200) \"\n",
       "\n",
       "#selection = \"ei=='excitatory'\"\n",
       "#selection = \"model_id==314642645\"\n",
       "\n",
       "cells_narrow_col_df = nodes_df.query(mask_narrow_col)\n",
-      "cells_below_y100_df = nodes_df.query(mask_below_y100)\n",
+      "mask_below_y100_slice = nodes_df.query(mask_below_y100_slice)\n",
       "\n",
       "\n",
       "print \"number of cells satisfying selection:\", len(cells_narrow_col_df.index)\n",
@@ -116,11 +113,11 @@
        "stream": "stdout",
        "text": [
         "number of cells satisfying selection: 3109\n",
-        "number of cells satisfying selection: 7351\n"
+        "number of cells satisfying selection: 21216\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
@@ -170,7 +167,7 @@
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 50
     },
     {
      "cell_type": "code",
@@ -193,7 +190,7 @@
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 51
     },
     {
      "cell_type": "code",
@@ -212,7 +209,7 @@
        ]
       }
      ],
-     "prompt_number": 33
+     "prompt_number": 52
     },
     {
      "cell_type": "code",
@@ -234,7 +231,7 @@
      "input": [
       "# put desired colors in the list below to use in a colormap:\n",
       "# may use multiple lists\n",
-      "color_list = ['azure', 'brown', 'cadetblue', 'coral', 'blueviolet', 'beige', 'green'] \n",
+      "color_list = ['lightseagreen', 'brown', 'cadetblue', 'coral', 'blueviolet', 'beige', 'green'] \n",
       "\n",
       "cre_lines = cells_below_y100_df['cre_line'].unique() # find unique labels from a particular column\n",
       "cmap_cre_line = cm.make_color_map(cre_lines,color_list) # make a color map for these labels\n",
@@ -247,19 +244,19 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 34,
+       "prompt_number": 64,
        "text": [
         "{'Htr3a': 'cadetblue',\n",
         " 'Ntsr1': 'blueviolet',\n",
         " 'Pvalb': 'brown',\n",
-        " 'Rbp4': 'azure',\n",
+        " 'Rbp4': 'lightseagreen',\n",
         " 'Rorb': 'green',\n",
         " 'Scnn1a': 'beige',\n",
         " 'Sst': 'coral'}"
        ]
       }
      ],
-     "prompt_number": 34
+     "prompt_number": 64
     },
     {
      "cell_type": "code",
@@ -267,8 +264,10 @@
      "input": [
       "#plot selected cells\n",
       "\n",
-      "fig.plot_morph(cells_below_y100_df[::10], morphologies, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
-      "fig.plot_somas(cells_below_y100_df[::10], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+      "#fig.plot_morph(cells_below_y100_df[::10], morphologies, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+      "fig.plot_somas(mask_below_y100_slice[::10], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+      "\n",
+      "fig.plot_slice(mask_below_y100_slice[::10], morphologies, cmap_cre_line,'cre_line',xplane_range)    #Pass query into plotting routine along with raw morphologies\n",
       "\n",
       "\n",
       "\n"
@@ -280,36 +279,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "... processing cell:  100 "
+        "... processing cell:  "
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "200 300 "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "400 500 "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "600 700 ready to display 3d segments!\n",
-        "... processing cell: "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 100 "
+        "100 "
        ]
       },
       {
@@ -351,11 +328,103 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "700 ready to display spherical somata!\n"
+        "700 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "800 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "900 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1000 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1100 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1200 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "ready to display spherical somata!\n",
+        "... processing cell:  "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "100 200 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "300 400 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "500 600 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "700 800 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "900 1000 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1100 1200 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "ready to display 3d segments!\n"
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 66
     },
     {
      "cell_type": "code",
@@ -365,7 +434,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "... showing ...\n"
+       ]
+      }
+     ],
+     "prompt_number": 69
     },
     {
      "cell_type": "code",
@@ -376,7 +454,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 65
     },
     {
      "cell_type": "code",
