--- a/examples/plot_net.ipynb
+++ b/examples/plot_net.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6d7c2ca03dda2b8d5a4ed5fcdc03498cdd9e33a5e37a662a18d6ef5a007a772c"
+  "signature": "sha256:a1aadfa68c57adf147a281d7a04f3358bfb82e32ac9c8d6d6c65dddb274119af"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -50,7 +50,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "...importing nodes...  "
+        "...importing nodes:  "
        ]
       },
       {
@@ -69,7 +69,7 @@
        ]
       }
      ],
-     "prompt_number": 68
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -97,7 +97,7 @@
       "#selection = \"model_id==314642645\"\n",
       "\n",
       "cells_narrow_col_df = nodes_df.query(mask_narrow_col)\n",
-      "mask_below_y100_slice = nodes_df.query(mask_below_y100_slice)\n",
+      "cells_below_y100_df = nodes_df.query(mask_below_y100_slice)\n",
       "\n",
       "\n",
       "print \"number of cells satisfying selection:\", len(cells_narrow_col_df.index)\n",
@@ -112,12 +112,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "number of cells satisfying selection: 3109\n",
-        "number of cells satisfying selection: 21216\n"
+        " number of cells satisfying selection: 3109\n",
+        "number of cells satisfying selection: 12920\n"
        ]
       }
      ],
-     "prompt_number": 47
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -142,7 +142,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -167,7 +167,7 @@
        ]
       }
      ],
-     "prompt_number": 50
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -190,7 +190,7 @@
        ]
       }
      ],
-     "prompt_number": 51
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -209,7 +209,7 @@
        ]
       }
      ],
-     "prompt_number": 52
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
