--- a/examples/sandbox.ipynb
+++ b/examples/sandbox.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ffa9b867e4ff51f34978455778b2c62c1ade604cba60d0da5b4b66368015ef4e"
+  "signature": "sha256:75c2bbdc83e3a6530c4128bc6dc1394c46fcbb24c27077324d448429c0c7ccca"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,6 +21,119 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numpy as np\n",
+      "import math\n",
+      "N = 8\n",
+      "h=3\n",
+      "theta=np.arange(N)*2*math.pi/N\n",
+      "xn=np.cos(theta)\n",
+      "zn=np.sin(theta)\n",
+      "seg_start =np.zeros((N,3))\n",
+      "seg_start[:,0]=xn\n",
+      "seg_start[:,2]=zn\n",
+      "seg_start\n",
+      "\n",
+      "seg_end =np.zeros((N,3))\n",
+      "seg_end[:,0]=xn\n",
+      "seg_end[:,1]=h\n",
+      "seg_end[:,2]=zn\n",
+      "seg_end\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 24,
+       "text": [
+        "array([[  1.00000000e+00,   3.00000000e+00,   0.00000000e+00],\n",
+        "       [  7.07106781e-01,   3.00000000e+00,   7.07106781e-01],\n",
+        "       [  6.12323400e-17,   3.00000000e+00,   1.00000000e+00],\n",
+        "       [ -7.07106781e-01,   3.00000000e+00,   7.07106781e-01],\n",
+        "       [ -1.00000000e+00,   3.00000000e+00,   1.22464680e-16],\n",
+        "       [ -7.07106781e-01,   3.00000000e+00,  -7.07106781e-01],\n",
+        "       [ -1.83697020e-16,   3.00000000e+00,  -1.00000000e+00],\n",
+        "       [  7.07106781e-01,   3.00000000e+00,  -7.07106781e-01]])"
+       ]
+      }
+     ],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "seg_start.shape\n",
+      "segments =[]\n",
+      "for seg in seg_end:\n",
+      "    print seg\n",
+      "    segments.extend(seg)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[ 1.  3.  0.]\n",
+        "[ 0.70710678  3.          0.70710678]\n",
+        "[  6.12323400e-17   3.00000000e+00   1.00000000e+00]\n",
+        "[-0.70710678  3.          0.70710678]\n",
+        "[ -1.00000000e+00   3.00000000e+00   1.22464680e-16]\n",
+        "[-0.70710678  3.         -0.70710678]\n",
+        "[ -1.83697020e-16   3.00000000e+00  -1.00000000e+00]\n",
+        "[ 0.70710678  3.         -0.70710678]\n"
+       ]
+      }
+     ],
+     "prompt_number": 33
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "segments=[]\n",
+      "segments.extend(seg_end)\n",
+      "#segments.extend(seg_end)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 40
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "seg_end"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 43,
+       "text": [
+        "array([[  1.00000000e+00,   3.00000000e+00,   0.00000000e+00],\n",
+        "       [  7.07106781e-01,   3.00000000e+00,   7.07106781e-01],\n",
+        "       [  6.12323400e-17,   3.00000000e+00,   1.00000000e+00],\n",
+        "       [ -7.07106781e-01,   3.00000000e+00,   7.07106781e-01],\n",
+        "       [ -1.00000000e+00,   3.00000000e+00,   1.22464680e-16],\n",
+        "       [ -7.07106781e-01,   3.00000000e+00,  -7.07106781e-01],\n",
+        "       [ -1.83697020e-16,   3.00000000e+00,  -1.00000000e+00],\n",
+        "       [  7.07106781e-01,   3.00000000e+00,  -7.07106781e-01]])"
+       ]
+      }
+     ],
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
@@ -187,6 +300,14 @@
       "\n",
       "\n"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
