--- a/examples/vis_l4net.ipynb
+++ b/examples/vis_l4net.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3320043534f89f3ac750e6be309b02694a144fc2f53b751709973f223f298a6d"
+  "signature": "sha256:538321e1c7730eb12eaa7322d0034272f1f53e89b71fa76369a6c4367b65dc1f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -297,7 +297,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "... showing ...\n"
+       ]
+      }
+     ],
+     "prompt_number": 65
     },
     {
      "cell_type": "code",
